--- a/DataChallenge2.ipynb
+++ b/DataChallenge2.ipynb
@@ -2828,8 +2828,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the plots shown above, it is apparent that the number of purchases per day before and after the referral program are not significantly different. The purchase rate during weekends is also significantly greater than during weekdays, ~3000 purchases/day. To check, the queries below counts the instances of purchases before and after the start of the program. The total count \"after\" is slightly greater, but is the difference significant? "
+    "base on the plots shown above, number of purchases per day before and after the referral program are not significantly different. The purchase rate during weekends is greater than during weekdays, ~3000 purchases/day."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
